Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.VB

        Public Declare Function BTIEBR_BlkSWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkSWDRd@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_BlkSWDWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkSWDWr@16" (ByVal swdval As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkWipe Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkWipe@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkWr@16" (ByVal block As UInt16(), ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_ChConfig@20" (ByVal enableflag As Int32, ByVal typeval As Int32, ByVal rtlink As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ChIsRunning Lib "BTIEBR.DLL" Alias "_BTIEBR_ChIsRunning@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdAddr@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_CmdAlloc Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdAlloc@8" (ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_CmdAllocEx Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdAllocEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_CmdBaseRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdBaseRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_CmdBaseWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdBaseWr@12" (ByVal addrval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdClear Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdClear@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdCountRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCountRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdCountWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCountWr@12" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdCtrlRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCtrlRd@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdCtrlWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCtrlWr@16" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdCurrRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCurrRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdCurrWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCurrWr@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_CmdInit Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdInit@8" (ByVal opcode As UInt16, ByVal block As UInt16())
        Public Declare Function BTIEBR_CmdInsert Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdInsert@12" (ByVal block As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_CmdRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdRd@12" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_CmdRestart Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdRestart@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_CmdStackClr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStackClr@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdStartRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStartRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_CmdStartWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdStartWr@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdTotalRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdTotalRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_CmdTotalWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdTotalWr@12" (ByVal countval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_CmdWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdWr@12" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_DescAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescAddr@24" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescAlloc Lib "BTIEBR.DLL" Alias "_BTIEBR_DescAlloc@4" (ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_DescConfig@28" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_DescConfigAll Lib "BTIEBR.DLL" Alias "_BTIEBR_DescConfigAll@16" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_DescOptRd Lib "BTIEBR.DLL" Alias "_BTIEBR_DescOptRd@24" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_DescOptWr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescOptWr@28" (ByVal descopt As UInt16, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_DescPtrRd Lib "BTIEBR.DLL" Alias "_BTIEBR_DescPtrRd@24" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescPtrWr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescPtrWr@28" (ByVal msgaddr As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescRd Lib "BTIEBR.DLL" Alias "_BTIEBR_DescRd@28" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal desc As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DescWr Lib "BTIEBR.DLL" Alias "_BTIEBR_DescWr@28" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal desc As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_DllUsageCount Lib "BTIEBR.DLL" Alias "_BTIEBR_DllUsageCount@0" () As Int32
        Public Declare Function BTIEBR_ErrorIsTaggedBC Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorIsTaggedBC@12" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorIsTaggedRT Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorIsTaggedRT@24" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ErrorResponse Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorResponse@12" (ByVal responseval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_ErrorSync Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorSync@12" (ByVal value As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_ErrorTimeout Lib "BTIEBR.DLL" Alias "_BTIEBR_ErrorTimeout@12" (ByVal timeoutval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_HostComm Lib "BTIEBR.DLL" Alias "_BTIEBR_HostComm@8" (ByVal lpparam As IntPtr, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_IsChan Lib "BTIEBR.DLL" Alias "_BTIEBR_IsChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubConfig@12" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortExists Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortExists@12" (ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortGetCount Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortGetCount@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortGetRTLink Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortGetRTLink@12" (ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortIsAvail Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortIsAvail@12" (ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubPortIsAvailMask Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortIsAvailMask@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_LHubPortSetRTLink Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubPortSetRTLink@16" (ByVal rtlink As Int32, ByVal portnum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_LHubRTLinkGetPort Lib "BTIEBR.DLL" Alias "_BTIEBR_LHubRTLinkGetPort@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListAddr@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListAddrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListAddrEx@16" (ByVal index As Int32, ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListBlockRdEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListBlockRdEx@16" (ByVal buf As UInt16(), ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListBlockWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListBlockWrEx@16" (ByVal buf As UInt16(), ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListClear Lib "BTIEBR.DLL" Alias "_BTIEBR_ListClear@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_ListConfig@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListConfigEx@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal skipval As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListDataRdEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListDataRdEx@20" (ByVal buf As UInt16(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListDataWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_ListDataWrEx@20" (ByVal buf As UInt16(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
